--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div id="About"> 
             <h2 class="heading">About Me</h2> 
             <div class ="line"></div>
-            <p class="content">I am a creative and passionate Python Developer with a keen eye for detail and a love for building beautiful, functional, and user-friendly web experiences. My journey in web development is driven by a desire to turn complex problems into simple, elegant solutions. I specialize in modern web technologies and am always eager to learn and adapt to the ever-evolving digital landscape.</p>
+            <p class="content">I am a creative and passionate WEB Developer with a keen eye for detail and a love for building beautiful, functional, and user-friendly web experiences. My journey in web development is driven by a desire to turn complex problems into simple, elegant solutions. I specialize in modern web technologies and am always eager to learn and adapt to the ever-evolving digital landscape.</p>
         </div>
            <div id="Skills"> 
             <h2 class="heading">My Skills</h2>
@@ -123,7 +123,7 @@
                         <div class="card">
                             <h3>Phone Book Management</h3>
                             <p>A sleek, single-page Book for a corporate client to save their information.</p>
-                            <span>HTML</span><span>CSS</span><span>Python</span>
+                            <span>HTML</span><span>CSS</span><span>PHP</span>
                         </div>
                     </div>
                     <div class="project">
