--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="profile">
                 <img src="C:\codeArmy\Html\WhatsApp Image 2025-12-28 at 10.11.44 AM.jpeg"alt="It is a profile picture">
                 <h2>Kapil Sharma</h2>
-                <p>Python Devloper</p>
+                <p>WEB Devloper</p>
             </div>
             <div class="contact">
             <div class="Email">
